PDFBOX-4195: force early class loading to check if people forgot to use --add-modules javax.xml.bind
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/2.0@1829821 13f79535-47bb-0310-9956-ffa450edef68